--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AWS NLU Search - AWS Samples"
+      content="AWS KNN-Powered Search - AWS Samples"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AWS NLU Search - AWS Samples</title>
+    <title>AWS KNN-Powered Search - AWS Samples</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
